--- a/book/01.intro.ipynb
+++ b/book/01.intro.ipynb
@@ -1191,7 +1191,7 @@
     "\n",
     "fastai中有许多不同的架构，我们将在本书中介绍这些架构（以及讨论如何创建你自己的架构）。然而，大多数时候，选择一个架构并不是深度学习过程中非常重要的部分。这是学者们喜欢谈论的东西，但在实践中，它不太可能是你需要花很多时间的东西。有一些标准的架构在大多数情况下是有效的，在这种情况下，我们使用的是一个叫做ResNet的架构，我们会在书中经常谈到它；它对许多数据集和问题都是快速而准确的。resnet34中的34指的是这个架构变体中的层数（其他选项是18、50、101和152）。使用更多层的架构的模型需要更长的时间来训练，而且更容易出现过拟合（即在验证集的准确性开始变差之前，你不能训练它们那么多的epochs）。另一方面，当使用更多的数据时，它们可以更准确一些。\n",
     "\n",
-    "什么是评估指标？评估指标是一个使用验证集衡量模型预测质量的函数，它将在每个epoch结束时被打印出来。在本例中，我们使用error_rate，它是fastai提供的一个函数，正如它所说的那样：告诉你验证集中被错误分类的图像的百分比。另一个常见的评估指标是准确率（就是$1.0 - error_rate$）。fastai还提供了许多其他指标，这些指标将在本书中讨论。\n",
+    "什么是评估指标？评估指标是一个使用验证集衡量模型预测质量的函数，它将在每个epoch结束时被打印出来。在本例中，我们使用error_rate，它是fastai提供的一个函数，正如它所说的那样：告诉你验证集中被错误分类的图像的百分比。另一个常见的评估指标是准确率（就是1.0 - error_rate）。fastai还提供了许多其他指标，这些指标将在本书中讨论。\n",
     "\n",
     "评估指标的概念可能让你联想到损失，但是这两者之间有着重要的区别。损失的目的在于定义一个“性能指标”，训练系统能够使用这个指标自动更新权重。换句话说，一个好的损失选择是一个容易让随机梯度下降使用的选择。但是，评估指标是为人类消费而定义的，所以一个好的指标是让你容易理解的，并且尽可能地接近你希望模型做的事情。有时，你可能会决定损失函数是一个合适的评估指标，但情况并不一定如此。\n",
     "\n",
