--- a/book/02.production.ipynb
+++ b/book/02.production.ipynb
@@ -1731,7 +1731,7 @@
     "19. `export`可以保存了些什么？\n",
     "20. 当我们使用模型来获得预测而不是训练时，它叫什么？\n",
     "21. 什么是IPython widgets？\n",
-    "22. 您可能希望何时使用CPU进行部署？GPU什么时候会更好？\n",
+    "22. 你可能希望何时使用CPU进行部署？GPU什么时候会更好？\n",
     "23. 将应用程序部署到服务器，而不是部署到手机或PC等客户端（或边缘）设备，有什么缺点？\n",
     "24. 在实践中推出熊警报系统时可能出现的三个问题是什么？\n",
     "25. 什么是“域外数据”？\n",
@@ -1745,7 +1745,11 @@
    "metadata": {},
    "source": [
     "### 进一步研究\n",
-    "\n"
+    "\n",
+    "1. 考虑一下传动方法如何映射到你感兴趣的项目或问题。\n",
+    "2. 什么时候最好避免某些类型的数据增强？\n",
+    "3. 对于一个你有兴趣应用深度学习的项目，考虑一下思维实验“如果它进行得非常非常好，会发生什么？”\n",
+    "4. 开始写博客，写下你的第一篇博客文章。例如，写下你认为深度学习在你感兴趣的领域可能有用的东西。"
    ]
   }
  ],
