--- a/book/03.ethics.ipynb
+++ b/book/03.ethics.ipynb
@@ -50,7 +50,7 @@
     "我们将从三个具体的例子开始，这些例子说明了技术中的三个常见道德问题：\n",
     "1. *追踪流程*————阿肯色州糟糕的医疗算法让患者陷入困境。\n",
     "2. *反馈循环*————YouTube的推荐系统引发了阴谋论热潮。\n",
-    "3. *偏见*————当在谷歌上搜索一个传统的非裔美国人的名字时，它会显示犯罪背景调查的广告。\n",
+    "3. *偏差*————当在谷歌上搜索一个传统的非裔美国人的名字时，它会显示犯罪背景调查的广告。\n",
     "\n",
     "事实上，对于我们在本章中介绍的每一个概念，我们都将提供至少一个具体的例子。对于每一件事，想想在这种情况下你可以做什么，以及在完成这件事时可能会遇到什么样的障碍。你会如何处理他们？你会注意什么？\n"
    ]
@@ -68,14 +68,14 @@
     "\n",
     "例如，YouTube有19亿用户，他们每天观看超过10亿小时的YouTube视频。它的推荐算法（由谷歌构建）旨在优化观看时间，负责大约70%的观看内容。但有一个问题：它导致了失控的反馈循环，导致《纽约时报》以“YouTube掀起了阴谋论热潮。它能被遏制吗？”为标题。表面上看，推荐系统是在预测人们会喜欢什么内容，但它们在决定人们看到什么内容方面也有很大的影响力。\n",
     "\n",
-    "### 偏见：Latanya Sweeney教授“被捕”\n",
+    "### 偏差：Latanya Sweeney教授“被捕”\n",
     "Latanya Sweeney博士是哈佛大学的教授，也是该大学数据隐私实验室的主任。在[\"Discrimination in Online Ad Delivery\"](https://arxiv.org/abs/1301.6822)一文中（见<Latanya_arrested>>），她描述了自己的发现，即在谷歌上搜索她的名字会导致广告上写着“Latanya Swieney，被捕了？”尽管她是已知唯一的Latanya Sweeney，并且从未被捕。然而，当她在谷歌上搜索其他名字时，比如“Kirsten Lindquist”，她得到了更中立的广告，尽管Kirsten Lindquist已经被捕三次。\n",
     "\n",
     "![](../images/03.ethics/image1.png)\n",
     "\n",
     "作为一名计算机科学家，她系统地研究了这一点，并研究了2000多个名字。她发现了一个明显的模式，即历史上黑人的名字收到的广告表明此人有犯罪记录，而白人的名字则有更中立的广告。\n",
     "\n",
-    "这是一个偏见的例子。这会对人们的生活产生很大的影响，例如，如果求职者在谷歌上被搜索，他们可能会有犯罪记录，而事实并非如此。\n"
+    "这是一个偏差的例子。这会对人们的生活产生很大的影响，例如，如果求职者在谷歌上被搜索，他们可能会有犯罪记录，而事实并非如此。\n"
    ]
   },
   {
@@ -124,7 +124,7 @@
     "\n",
     "这些不仅仅是算法的问题。它们是数据产品的设计问题。但是，产品经理、高管、法官、记者、医生......无论谁最终开发和使用你的模型所构成的系统，都不会很好地理解你所做的决定，更不用说改变它们。\n",
     "\n",
-    "例如，两项研究发现，亚马逊的面部识别软件产生了不准确和有种族偏见的结果。亚马逊声称，研究人员应该改变默认参数，但没有解释这将如何改变有偏见的结果。此外，事实证明，亚马逊也没有指示使用其软件的警察部门这样做。据推测，开发这些算法的研究人员和编写提供给警察的指南的亚马逊员工之间存在很大的距离。缺乏紧密的整合导致整个社会、警察和亚马逊本身出现严重问题。事实证明，他们的系统错误地将28名国会议员与犯罪分子的照片相匹配！（从图中可以看出，与罪犯照片错误匹配的国会议员中，有色人种的比例过高。）。\n",
+    "例如，两项研究发现，亚马逊的面部识别软件产生了不准确和有种族偏差的结果。亚马逊声称，研究人员应该改变默认参数，但没有解释这将如何改变有偏差的结果。此外，事实证明，亚马逊也没有指示使用其软件的警察部门这样做。据推测，开发这些算法的研究人员和编写提供给警察的指南的亚马逊员工之间存在很大的距离。缺乏紧密的整合导致整个社会、警察和亚马逊本身出现严重问题。事实证明，他们的系统错误地将28名国会议员与犯罪分子的照片相匹配！（从图中可以看出，与罪犯照片错误匹配的国会议员中，有色人种的比例过高。）。\n",
     "\n",
     "![](../images/03.ethics/image4.png)\n",
     "\n",
@@ -146,7 +146,7 @@
     "\n",
     "- 追索和问责的需要\n",
     "- 反馈循环\n",
-    "- 偏见\n",
+    "- 偏差\n",
     "- 虚假信息\n",
     "\n",
     "让我们依次看一下。\n",
@@ -202,7 +202,28 @@
     "> ：对视频主题进行分类的一个重要信号是它来自哪个频道。例如，上传到烹饪频道的视频很可能是烹饪视频。但是我们如何知道一个频道是关于什么主题的呢？嗯...在一定程度上是通过看它所包含的视频的主题！你看到环路了吗？例如，许多视频都有一个描述，说明是用什么相机拍摄视频的。因此，这些视频中的一些可能会被归类为关于“摄影”的视频。如果一个频道有这样一个错误分类的视频，它可能会被分类为“摄影”频道，这使得该频道未来的视频更有可能被错误地归类为“摄像”。这甚至可能导致类似病毒的分类失控！打破这种反馈循环的一种方法是对具有和不具有频道信号的视频进行分类。然后，在对通道进行分类时，你只能使用在没有通道信号的情况下获得的分类。这样，反馈循环就被打破了。\n",
     "\n",
     "有一些人和组织试图解决这些问题的积极例子。Meetup的首席机器学习工程师埃文-埃斯托拉(Evan Estola)讨论了男性对科技聚会表示出比女性更多兴趣的例子。考虑性别因素可能会导致Meetup的算法向女性推荐更少的科技聚会，因此，更少的女性会发现并参加科技聚会，这可能会导致算法向女性推荐更少的科技聚会，如此反复，形成一个自我强化的反馈循环。因此，埃文和他的团队为他们的推荐算法做出了道德上的决定，即通过明确地不使用性别作为其模型的一部分来避免产生这样的反馈循环。看到一家公司不只是不假思索地优化一个指标，而是考虑其影响，这是令人鼓舞的。埃文说：\"你需要决定在你的算法中不使用哪个功能......最优化的算法也许不是投入生产的最佳算法。\"\n",
-    "\n"
+    "\n",
+    "虽然Meetup选择避免这样的结果，但Facebook提供了一个允许失控的反馈循环的例子。像YouTube一样，它倾向于通过向用户介绍更多的阴谋论来激化他们的兴趣。正如研究虚假信息扩散的研究人员Renee DiResta所写的那样：\n",
+    "\n",
+    ">: 一旦人们加入了一个有阴谋思想的[Facebook]团体，他们就会被算法引导到其他大量的团体。加入一个反疫苗团体，你的建议将包括反转基因、化学追踪观察、平地人（是的，真的）和\"自然治愈癌症\"的团体。推荐引擎不是把用户从兔子洞里拉出来，而是把他们进一步推入。\n",
+    "\n",
+    "牢记这种行为可能会发生，并在自己的项目中看到反馈循环的苗头时，预测反馈环路或采取积极的行动来打破它，这一点极为重要。另一件要记住的事情是偏差，正如我们在前一章中简单讨论的那样，它可以以非常麻烦的方式与反馈循环相互作用。"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 偏差\n",
+    "\n",
+    "网上关于偏差的讨论往往很快就会变得相当混乱。“偏差”这个词有很多不同的含义。统计学家经常认为，当数据伦理学家在谈论偏差时，他们是在谈论偏差一词的统计学定义。但他们不是。而且他们肯定不是在谈论出现在权重和偏差中的偏差，权重和偏差是你的模型的参数!\n",
+    "\n",
+    "他们所谈论的是社会科学的偏差概念。在\"理解机器学习意外后果的框架 \"中，麻省理工学院的哈里尼-苏雷什和约翰-古塔格描述了机器学习中的六种偏差，他们的论文中总结了这一点。\n",
+    "\n",
+    "![](../images/03.ethics/pipeline_diagram.svg)\n",
+    "\n",
+    "我们将讨论其中四种类型的偏差，这些偏差是我们在自己的工作中发现的最有帮助的偏差（关于其他偏差的细节，请参见论文）。"
    ]
   }
  ],
