--- a/book/03.ethics.ipynb
+++ b/book/03.ethics.ipynb
@@ -225,6 +225,104 @@
     "\n",
     "我们将讨论其中四种类型的偏差，这些偏差是我们在自己的工作中发现的最有帮助的偏差（关于其他偏差的细节，请参见论文）。"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 历史偏见\n",
+    "\n",
+    "*历史偏见*来自于人是有偏见的，过程是有偏见的，以及社会是有偏见的事实。Suresh和Guttag说： \"历史偏见是数据生成过程第一步中的一个基本的、结构性的问题，即使是在完美的抽样和特征选择的情况下也会存在。\"\n",
+    "\n",
+    "例如，以下是美国历史上*种族偏见*的几个例子，来自《纽约时报》的文章[\"种族偏见，即使我们有良好的意图\"]（https://www.nytimes.com/2015/01/04/upshot/the-measuring-sticks-of-racial-bias-.html），作者是芝加哥大学的Sendhil Mullainathan：\n",
+    "\n",
+    "  - 当医生看到相同的文件时，他们不太可能向黑人患者推荐心导管手术（一种有用的手术）。\n",
+    "  - 在为一辆二手车讨价还价时，黑人得到的初始价格要高出700美元，而且得到的优惠要小得多。\n",
+    "  - 在Craigslist网站上，用黑人的名字回复公寓出租广告，比用白人的名字得到的回复少。\n",
+    "  - 一个全白的陪审团给黑人被告定罪的可能性比白人被告高16个百分点，但当陪审团中有一名黑人成员时，对两人的定罪率是一样的。\n",
+    "\n",
+    "在美国广泛用于判决和保释决定的COMPAS算法是一个重要算法的例子，它在[ProPublica](https://www.propublica.org/article/machine-bias-risk-assessments-in-criminal-sentencing)测试中显示出明显的种族偏见（<<bail_algorithm>>）。\n",
+    "\n",
+    "![](../images/03.ethics/image6.png)\n",
+    "\n",
+    "任何涉及人类的数据集都可能存在这种偏见：医疗数据、销售数据、住房数据、政治数据等等。由于潜在的偏见如此普遍，因此数据集中的偏见同样非常普遍。种族偏见甚至出现在计算机视觉中，如<<Google_photos>>中谷歌照片用户在推特上分享的自动分类照片示例所示。\n",
+    "\n",
+    "![](../images/03.ethics/image7.png)\n",
+    "\n",
+    "是的，这表明了你的想法：谷歌照片将一位黑人用户与朋友的照片归类为“大猩猩”！这一算法失误在媒体上引起了很多关注。公司发言人表示：“我们对此感到震惊，并深表歉意。”。“显然，在自动图像标记方面还有很多工作要做，我们正在研究如何防止此类的错误的再次发生。”\n",
+    "\n",
+    "不幸的是，当输入数据出现问题时，很难解决机器学习系统中的问题。正如《卫报》的报道所暗示的那样，谷歌的第一次尝试并没有激发人们的信心。\n",
+    "\n",
+    "![](../images/03.ethics/image8.png)\n",
+    "\n",
+    "这些问题当然不仅仅局限于谷歌。麻省理工学院的研究人员研究了最流行的在线计算机视觉API，以了解它们的准确性。但他们并不是只计算准确度，而是研究了四个不同分组的准确度，如<<face_recognition>>所示。\n",
+    "\n",
+    "![face_recognition](../images/03.ethics/image9.jpeg)\n",
+    "\n",
+    "例如，IBM的系统对深色皮肤女性的错误率为34.7%，而对浅色皮肤男性的错误率则为0.3%，超过100倍！一些人对这些实验做出了错误的反应，声称这种差异只是因为深色皮肤更难被计算机识别。然而，实际情况是，在这一结果造成的负面宣传之后，所有相关公司都大幅改进了深色皮肤的模型，一年后，它们几乎和浅色皮肤一样好。因此，这实际上表明，开发人员未能利用包含足够深色人脸的数据集，也没有用深色人脸测试他们的产品。\n",
+    "\n",
+    "麻省理工学院的研究人员之一Joy Buolamwini警告说：“我们已经进入了一个过度自信但准备不足的自动化时代。如果我们不能制造出合乎道德和包容性的人工智能，我们就有可能在机器中立的幌子下失去在民权和性别平等方面取得的成果。”\n",
+    "\n",
+    "部分问题似乎是用于训练模型的流行数据集构成的系统性失衡。Shrya Shankar等人的论文《没有表示就没有分类：评估发展中国家开放数据集中的地理多样性问题》的摘要中指出，“我们分析了两个大型的、公开可用的图像数据集，以评估地理多样性，发现这些数据集可观察到地表现出以美洲为中心和以欧洲为中心的表示偏差。此外，我们分析了在这些数据集上训练的分类器，以评估这些训练分布的影响，并发现不同地区图像的相对性能存在很大差异。”<<image_provinance>>显示了论文中的一个图表，显示了当时（正如本书所写的那样，现在仍然是）用于训练模型的两个最重要的图像数据集的地理组成。\n",
+    "\n",
+    "![image_provinance](../images/03.ethics/image10.png)\n",
+    "\n",
+    "绝大多数图像来自美国和其他西方国家，导致在ImageNet上训练的模型在其他国家和文化的场景中表现更差。例如，研究发现，这些模型在识别低收入国家的家用物品（如肥皂、香料、沙发或床）方面更差。<<object_detect>>显示了Facebook人工智能研究的Terrance DeVries等人的论文《对象识别对每个人都有效吗？》中的一张图像，说明了这一点。\n",
+    "\n",
+    "![object_detect](../images/03.ethics/image17.png)\n",
+    "\n",
+    "在这个例子中，我们可以看到，每个商业图像识别服务都预测最有可能的答案是“食物”，低收入肥皂的例子离准确还有很长的路要走！\n",
+    "\n",
+    "此外，正如我们稍后将要讨论的那样，绝大多数人工智能研究人员和开发人员都是年轻的白人。我们看到的大多数项目都使用直接产品开发小组的朋友和家人进行大多数用户测试。考虑到这一点，我们刚才讨论的问题应该不会令人惊讶。\n",
+    "\n",
+    "在用作自然语言处理模型数据的文本中也发现了类似的历史偏见。这会出现在下游的机器学习任务中的很多方面。例如，据广泛报道，直到去年，谷歌翻译公司在将土耳其语中性代词“o”翻译成英语时还表现出系统性的偏见：当应用于通常与男性相关的工作时，它使用“he”，而当应用于经常与女性相关的工作时，它则使用“she”（<<Turkish_gender>>）。\n",
+    "\n",
+    "![](../images/03.ethics/image11.png)\n",
+    "\n",
+    "我们在网络广告中也看到了这种偏见。例如，穆罕默德·阿里等人在2019年的一项研究发现，即使投放广告的人没有故意歧视，脸书也会根据种族和性别向不同的受众展示广告。具有相同文字的住房广告，但图片是一个白人或黑人家庭，被展示给不同种族的受众。\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 测量偏差\n",
+    "\n",
+    "在《美国经济评论》上发表的论文《机器学习是否会使道德风险和错误自动化》中，Sendhil Mullainathan和Ziad Obermeyer看了一个模型，试图回答这个问题：使用历史电子健康记录（EHR）数据，哪些因素最能预测中风？这些是该模型中最重要的预测因素：\n",
+    "\n",
+    "- 中风经历\n",
+    "- 心血管疾病\n",
+    "- 意外伤害\n",
+    "- 良性乳房肿块\n",
+    "- 结肠镜检查\n",
+    "- 鼻窦炎\n",
+    "\n",
+    "然而，只有前两名与中风有关！这是不可能的！根据我们到目前为止的研究，你可能可以猜到原因。我们还没有真正测量*中风*，中风发生在大脑的一个区域由于血液供应的中断而缺少氧气。我们所测量的是谁有症状，去看医生，接受适当的测试，并得到中风的诊断。实际上，中风并不是与这个完整清单相关的唯一事情，它也与成为那种真正去看医生的人相关（这受谁有机会获得医疗服务、能负担得起他们的费用、没有经历过基于种族或性别的医疗歧视等因素的影响）！如果你有可能因为意外受伤而去看医生，那么你也有可能在中风的时候去看医生。\n",
+    "\n",
+    "这是一个*测量偏差*的例子。当我们的模型出错时，就会发生这种情况，因为我们测量的东西不对，或者以错误的方式测量，或者不恰当地将测量结果纳入模型。\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 聚合偏差\n",
+    "\n",
+    "当模型没有以包含所有适当因素的方式汇总数据时，或者当模型没有包括必要的交叉项、非线性等时，就会出现*聚合偏差*。这在医疗环境中特别容易发生。例如，治疗糖尿病的方式往往是基于简单的单变量统计和涉及小群异质人群的研究。对结果的分析往往是以不考虑不同种族或性别的方式进行的。然而，事实证明，不同种族的糖尿病患者有不同的并发症，而HbA1c水平（广泛用于诊断和监测糖尿病）在不同种族和性别中存在复杂的差异。这可能导致人们被误诊或错误的治疗，因为医疗决策是基于一个不包括这些重要变量和相互作用的模型。\n",
+    "\n",
+    "#### 表征偏差\n",
+    "\n",
+    "论文《生物中的偏见：高风险环境中语义表征偏见的案例研究》摘要中指出，职业中存在性别失衡（例如，女性更有可能成为护士，而男性更有可能成为牧师），并说：\"性别之间真阳率的差异与职业中现有的性别失衡相关，这可能会加剧这些失衡\"。\n",
+    "\n",
+    "换句话说，研究人员注意到，预测职业的模型不仅*反映*了潜在人群的实际性别失衡，而且实际上*放大*了这种失衡！这种类型的*表示偏差*非常常见，尤其是对于简单的模型。当存在一些清晰、易于看到的潜在关系时，一个简单的模型通常会简单地假设这种关系一直存在。正如论文中的<<representation_bias>>所示，对于女性比例较高的职业，该模型往往高估了该职业的流行率。\n",
+    "\n",
+    "![](../images/03.ethics/image12.png)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
